@@ -58,6 +58,7 @@
 25. Workaround build issues with SpeexDSP 1.2rc2
 26. Use correct stream icon in playqueue for streams with no song details.
 27. Fix FreeBSD build.
+28. Respect carriage returns when displaying comments in context view.
 
 1.5.1
 -----
